[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.0.17"
urlencoding = "2.1.2"
serde = "1.0.164"
serde_json = "1.0.99"

[profile.release]
lto = true
strip = true
codegen-units = 1
